--- a/src/css/main.css
+++ b/src/css/main.css
@@ -136,7 +136,7 @@
 }
 
 .modal-dialog .modal-content {
-  background-color: rgba(38, 37, 49, 0.5);
+  background-color: rgba(42, 45, 55);
 }
 
 #video-container {
